--- a/Talks:Posters/abdnn.bib
+++ b/Talks:Posters/abdnn.bib
@@ -111,3 +111,131 @@ title = {Mathematical Statistics and Data Analysis},
 publisher = {Duxbury Press},
 year = 2006,
 }
+@article{Ernst2002,
+annote = {10.1038/415429a},
+author = {Ernst, Marc O and Banks, Martin S},
+issn = {0028-0836},
+journal = {Nature},
+month = jan,
+number = {6870},
+pages = {429--433},
+title = {{Humans integrate visual and haptic information in a statistically optimal fashion}},
+url = {http://dx.doi.org/10.1038/415429a},
+volume = {415},
+year = {2002}
+}
+@article{Stocker2006,
+annote = {10.1038/nn1669},
+author = {Stocker, Alan A and Simoncelli, Eero P},
+issn = {1097-6256},
+journal = {Nat Neurosci},
+month = apr,
+number = {4},
+pages = {578--585},
+publisher = {Nature Publishing Group},
+title = {{Noise characteristics and prior expectations in human visual speed perception}},
+url = {http://dx.doi.org/10.1038/nn1669 http://www.nature.com/neuro/journal/v9/n4/suppinfo/nn1669\_S1.html},
+volume = {9},
+year = {2006}
+}
+@article{Griffiths01092006,
+author = {Griffiths, Thomas L. and Tenenbaum, Joshua B.}, 
+title = {Optimal Predictions in Everyday Cognition},
+volume = {17}, 
+number = {9}, 
+pages = {767-773}, 
+year = {2006}, 
+doi = {10.1111/j.1467-9280.2006.01780.x}, 
+abstract ={Human perception and memory are often explained as optimal statistical inferences that are informed by accurate prior probabilities. In contrast, cognitive judgments are usually viewed as following error-prone heuristics that are insensitive to priors. We examined the optimality of human cognition in a more realistic context than typical laboratory studies, asking people to make predictions about the duration or extent of everyday phenomena such as human life spans and the box-office take of movies. Our results suggest that everyday cognitive judgments follow the same optimal statistical principles as perception and memory, and reveal a close correspondence between people's implicit probabilistic models and the statistics of the world.}, 
+URL = {http://pss.sagepub.com/content/17/9/767.abstract}, 
+eprint = {http://pss.sagepub.com/content/17/9/767.full.pdf+html}, 
+journal = {Psychological Science} 
+}
+@INPROCEEDINGS{Jordan99anintroduction,
+    author = {Michael I. Jordan and Zoubin Ghahramani and et al.},
+    title = {An introduction to variational methods for graphical models},
+    booktitle = {MACHINE LEARNING},
+    year = {1999},
+    pages = {183--233},
+    publisher = {MIT Press}
+}
+@ARTICLE{Doucet00onsequential,
+    author = {Arnaud Doucet and Simon Godsill and Christophe Andrieu},
+    title = {On Sequential Monte Carlo Sampling Methods for Bayesian Filtering},
+    journal = {STATISTICS AND COMPUTING},
+    year = {2000},
+    volume = {10},
+    number = {3},
+    pages = {197--208}
+}
+@article{AndrieuFDJ03,
+  author    = {Christophe Andrieu and
+               Nando de Freitas and
+               Arnaud Doucet and
+               Michael I. Jordan},
+  title     = {An Introduction to {MCMC} for Machine Learning},
+  journal   = {Machine Learning},
+  volume    = {50},
+  number    = {1-2},
+  pages     = {5--43},
+  year      = {2003},
+  url       = {http://dx.doi.org/10.1023/A:1020281327116},
+  doi       = {10.1023/A:1020281327116},
+  timestamp = {Thu, 26 May 2011 15:25:22 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/ml/AndrieuFDJ03},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@incollection{NIPS2009_3782,
+title = {Neural Implementation of Hierarchical Bayesian Inference by Importance Sampling},
+author = {Shi, Lei and Thomas L. Griffiths},
+booktitle = {Advances in Neural Information Processing Systems 22},
+editor = {Y. Bengio and D. Schuurmans and J.D. Lafferty and C.K.I. Williams and A. Culotta},
+pages = {1669--1677},
+year = {2009},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/3782-neural-implementation-of-hierarchical-bayesian-inference-by-importance-sampling.pdf}
+}
+@incollection{NIPS2011_4346,
+title = {Select and Sample - A Model of Efficient Neural Inference and Learning},
+author = {Jacquelyn A. Shelton and Abdul S. Sheikh and Pietro Berkes and Joerg Bornschein and Joerg Luecke},
+booktitle = {Advances in Neural Information Processing Systems 24},
+editor = {J. Shawe-Taylor and R.S. Zemel and P.L. Bartlett and F. Pereira and K.Q. Weinberger},
+pages = {2618--2626},
+year = {2011},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/4346-select-and-sample-a-model-of-efficient-neural-inference-and-learning.pdf}
+}
+@incollection{NIPS2013_4876,
+title = {Demixing odors - fast inference in olfaction},
+author = {Grabska-Barwinska, Agnieszka and Beck, Jeff and Pouget, Alexandre and Latham, Peter},
+booktitle = {Advances in Neural Information Processing Systems 26},
+editor = {C.J.C. Burges and L. Bottou and M. Welling and Z. Ghahramani and K.Q. Weinberger},
+pages = {1968--1976},
+year = {2013},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/4876-demixing-odors-fast-inference-in-olfaction.pdf}
+}
+@incollection{NIPS2002_2152,
+title = {Interpreting Neural Response Variability as Monte Carlo Sampling of the Posterior},
+author = {Patrik O. Hoyer and Aapo Hyv\"{a}rinen},
+booktitle = {Advances in Neural Information Processing Systems 15},
+editor = {S. Becker and S. Thrun and K. Obermayer},
+pages = {293--300},
+year = {2003},
+publisher = {MIT Press},
+url = {http://papers.nips.cc/paper/2152-interpreting-neural-response-variability-as-monte-carlo-sampling-of-the-posterior.pdf}
+}
+@article{LeCun2015,
+abstract = {Deep learning allows computational models that are composed of multiple processing layers to learn representations of data with multiple levels of abstraction. These methods have dramatically improved the state-of-the-art in speech recognition, visual object recognition, object detection and many other domains such as drug discovery and genomics. Deep learning discovers intricate structure in large data sets by using the backpropagation algorithm to indicate how a machine should change its internal parameters that are used to compute the representation in each layer from the representation in the previous layer. Deep convolutional nets have brought about breakthroughs in processing images, video, speech and audio, whereas recurrent nets have shone light on sequential data such as text and speech.},
+author = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+issn = {0028-0836},
+journal = {Nature},
+month = may,
+number = {7553},
+pages = {436--444},
+publisher = {Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+title = {{Deep learning}},
+url = {http://dx.doi.org/10.1038/nature14539 10.1038/nature14539},
+volume = {521},
+year = {2015}
+}
